--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="content-wrapper">
         <header>
-            <img src="./images/icon-star.svg" alt="a purple star">
+            <img src="icon-star.svg" alt="a purple star">
             <h1 class="main-header">FAQs</h1>
         </header>
        
@@ -26,8 +26,8 @@
             <div class="accordion-item">
             <div class="accordion-question">
                 <p>What is Frontend Mentor, and how will it help me?</p>
-                <img class="accordion-toggle-plus" src="./images/icon-plus.svg" alt="Expand">
-                <img class="accordion-toggle-minus" src="./images/icon-minus.svg" alt="Collapse">
+                <img class="accordion-toggle-plus" src="icon-plus.svg" alt="Expand">
+                <img class="accordion-toggle-minus" src="icon-minus.svg" alt="Collapse">
             </div>
       
                 <p class="accordion-content ">
@@ -42,8 +42,8 @@
             <div class="accordion-item">
                 <div class="accordion-question">
                     <p>Is Frontend Mentor free?</p>
-                    <img class="accordion-toggle-plus" src="./images/icon-plus.svg" alt="Expand">
-                    <img class="accordion-toggle-minus" src="./images/icon-minus.svg" alt="Collapse">
+                    <img class="accordion-toggle-plus" src="icon-plus.svg" alt="Expand">
+                    <img class="accordion-toggle-minus" src="icon-minus.svg" alt="Collapse">
                 </div>
                     <p class="accordion-content ">
                         Frontend Mentor offers realistic coding challanges to help 
@@ -57,8 +57,8 @@
             <div class="accordion-item">
                 <div class="accordion-question">
                     <p >Can I use Frontend Mentor projects in my portfolio?</p>
-                    <img class="accordion-toggle-plus" src="./images/icon-plus.svg" alt="Expand">
-                    <img class="accordion-toggle-minus" src="./images/icon-minus.svg" alt="Collapse">
+                    <img class="accordion-toggle-plus" src="icon-plus.svg" alt="Expand">
+                    <img class="accordion-toggle-minus" src="icon-minus.svg" alt="Collapse">
                 </div>
                     <p class="accordion-content ">
                         Frontend Mentor offers realistic coding challanges to help 
@@ -72,8 +72,8 @@
             <div class="accordion-item">
                 <div class="accordion-question">
                     <p >How can I get help if I'm stuck on a challenge?</p>
-                <img class="accordion-toggle-plus" src="./images/icon-plus.svg" alt="Expand">
-                <img class="accordion-toggle-minus" src="./images/icon-minus.svg" alt="Collapse">
+                <img class="accordion-toggle-plus" src="icon-plus.svg" alt="Expand">
+                <img class="accordion-toggle-minus" src="icon-minus.svg" alt="Collapse">
                 </div>
                     <p class="accordion-content ">
                         Frontend Mentor offers realistic coding challanges to help 
